--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width", initial-scale="1">
+  <script src="https://use.fontawesome.com/efe373c2de.js"></script>
 	<title>Lash45</title>
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+ <link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
 
 
 
-<div class="container" style="font-family: 'Roboto', sans-serif;">
+<div class="container">
   
-  <nav class="navbar navbar-light navbar-toggleable-md bg-faded">
+  <nav class="navbar navbar-light navbar-toggleable-md ">
   <button class="navbar navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle Navigation">
     <span class="navbar-toggler-icon"></span>
  
